state to pull random meme gif

--- a/src/index.css
+++ b/src/index.css
@@ -28,16 +28,14 @@ main {
   margin-right: 6px;
 }
 
-
 .form {
-  width: 460px; 
+  width: 460px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   width: 100%;
   margin-bottom: 50px;
   gap: 40px;
-
 }
 
 .form-input {
@@ -57,5 +55,10 @@ main {
   cursor: pointer;
   justify-content: center;
   width: max-content;
-  padding:10px 100px 10px;
+  padding: 10px 100px 10px;
+}
+
+.meme-image {
+  margin-top: 20px;
+  max-width: 100%;
 }
